--- a/NeuralNetworks/NeuralNetworks.csproj
+++ b/NeuralNetworks/NeuralNetworks.csproj
@@ -42,11 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connection.cs" />
+    <Compile Include="InputNeuron.cs" />
+    <Compile Include="NeuralNetwork.cs" />
+    <Compile Include="NeuralNetworkTest\SingleLayerPerceptronTest.cs" />
+    <Compile Include="Neuron.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkingNeuron.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
